// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates visualization widget 1`] = `
Object {
  "@widget/id": Object {
    "data": null,
    "error": null,
    "isConfigured": false,
    "isInitialized": false,
    "isLoading": false,
    "widget": Object {
      "id": "@widget/id",
      "position": Object {
        "h": 2,
        "w": 4,
        "x": 1,
        "y": 2,
      },
      "query": null,
      "settings": Object {
        "chartSettings": Object {},
        "visualizationType": null,
        "widgetSettings": Object {},
      },
      "type": "visualization",
    },
  },
}
`;

exports[`finishes visualization widget configuration 1`] = `
Object {
  "data": null,
  "error": null,
  "isConfigured": true,
  "isInitialized": false,
  "isLoading": false,
  "widget": Object {
    "id": "@widget/id",
    "position": Object {
      "h": 2,
      "w": 6,
      "x": 3,
      "y": 2,
    },
    "query": "purchases",
    "settings": Object {
      "chartSettings": Object {
        "layout": "vertical",
      },
      "visualizationType": "bar",
      "widgetSettings": Object {},
    },
    "type": "visualization",
  },
}
`;
